Double scroll fixed with body overflow-y hidden

--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ body {
 	min-height: 100vh;
 	text-rendering: optimizeSpeed;
 	line-height: 1.5;
+	overflow-y: hidden;
 }
 
 img {
